# rust_hello_world

./: Cargo.toml
src/: main.rs
